fix message layout on mobile

--- a/webroot/css/messages.css
+++ b/webroot/css/messages.css
@@ -6,7 +6,8 @@
     position: relative;
     text-align: center;
     /* width: fit-content; */
-    width: 90%;
+    /* subtract padding from indented width */
+    width: 90% - 80px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 20px;
